# snakemake-wrapper-utils

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  release-please.yml  test.yaml
snakemake_wrapper_utils/: bcftools.py  gatk.py  java.py  samtools.py  snakemake.py
tests/: test_snakemake_wrapper_utils.py
