[tool.poetry]
name = "snakemake-wrapper-utils"
version = "0.1.0"
description = "A collection of utils for Snakemake wrappers."
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
